@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "45u [Thu  3 Mar 21:51:14 GMT 2022]"
-BUILD = "03032151"
+VERSION = "45u [Fri  4 Mar 09:55:09 GMT 2022]"
+BUILD = "03040955"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
